# dor-fs

./: .gitignore  .gitkeep  .gitmodules  Cargo.toml  README.md  build.rs  index.html  input.css  package.json  tailwind.config.js  web.config  web.prod
blah/.fs/: changes.json
blah/writing/: creative-coding-in-rust.md  my_storm.md  night_mystery.md  oh_humanity.md  so_you_want_to_prototype_a_web_app.md  v1.0.0.md  v2.0.0.md
playground/: .gitignore
playground/stuff/: hello_world.md
sepolia/.fs/: changes.json
src/: ipfs.rs  lib.rs  main.rs
src/cli/: app.rs  args.rs  change.rs  config.rs  device.rs  mod.rs  utils.rs
src/cli/changes/: log.rs  mod.rs
src/cli/config/: mod.rs  on_disk_default.rs  on_disk_device.rs
src/cli/ops/: change_log.rs  device.rs  device_subcommand.rs  diff.rs  health.rs  init.rs  mod.rs  pull.rs  push.rs  schema_subcommand.rs  stage.rs  stat.rs  tag.rs  utils.rs
src/device/: mod.rs
src/device/eth/: cid_token.rs  mod.rs  root_cid.rs
src/device/ipfs/: client.rs  gateway.rs  mod.rs
src/eth/: mod.rs  root_cid.rs
src/ipfs/: client.rs  mod.rs
src/root_cid/: RootCid.sol  client.rs  mod.rs
src/types/: dor_fs.rs  dor_store.rs  item.rs  manifest.rs  mod.rs  object.rs  schema.rs
src/types/schema/: audio.rs  mod.rs  visual.rs  writing.rs
src/wasm/: app.rs  device.rs  env.rs  mod.rs  utils.rs
src/wasm/compat/: mod.rs  wasm_device.rs
src/wasm/components/: error_message_box.rs  internal_link.rs  item_table.rs  link.rs  mod.rs  object_table.rs  socials.rs  static_md.rs
src/wasm/pages/: about.rs  audio.rs  index.rs  mod.rs  object.rs  status.rs  visual.rs  writing.rs
static/: index.md
style/: output.css
test/: RootCid.t.sol
tests/: ipfs.rs
