[package]
name = "dor-store"
version = "0.1.0"
edition = "2021"
# TODO: License

[lib]
crate-type = ["cdylib", "rlib"]

#TODO: make looser version reqs
[dependencies]
anyhow = "1.0.75"
blake3 = "1.5.0"
chrono = { version = "^0.4", features = ["serde"] }
cid = { version = "0.11.0", features = ["serde-codec"] }
clap = { version = "^4", features = ["derive"] }
dotenvy = "0.15.7"
ethers = { version =  "2.0.10", features = ["rustls"] }
fs-tree = "0.5.5"
futures-util = "0.3.29"
http = "^0.2"
ipfs-api-backend-hyper = { version = "^0.6", features = ["with-hyper-tls"] }
libipld = { version = "0.16.0", features = ["serde-codec"] }
pico-args = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["multipart"] }
serde = "1.0.193"
serde_json = "1.0.106"
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "^2", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
