[package]
name = "krondor-org"
version = "2.0.0"
edition = "2021"
license = "Unlicense"

[dependencies]
anyhow = "^1"
blake3 = "^1.5"
chrono = { version = "^0.4", features = ["serde"] }
cid = { version = "^0.11", features = ["serde-codec"] }
# TODO: alloy-rs instead
ethers = { version =  "^2", features = ["rustls"] }
futures-util = "^0.3"
http = "^0.2"
rand = "^0.8"
reqwest = { version = "^0.11", features = ["trust-dns"] }
serde = "^1"
serde_json = "^1"
thiserror = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.3"
url = { version = "^2", features = ["serde"] }

[build-dependencies]
dotenv = "^0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "^4", features = ["derive"] }
ipfs-api-backend-hyper = { version = "^0.6", features = ["with-hyper-tls"] }
fs-tree = "^0.5"
tokio = { version = "^1.32", features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-trait = "^0.1"
console_error_panic_hook = "^0.1"
getrandom = { version = "0.2", features = ["js"] }
leptos = { version = "^0.5", features = ["csr", "nightly"] }
leptos_router = { version = "^0.5", features = ["csr", "nightly"] }
leptos-use = "0.8.1"
leptos-struct-table = { version = "^0.4", features = ["chrono"] }
pulldown-cmark = "^0.9"
regex = "^1"
web-sys = { version = "^0.3", features = ["HtmlMediaElement"] }
